gets tsx version kinda working

--- a/fresh/example/index.html
+++ b/fresh/example/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>YO! That's Fresh</title>
+    <link rel="stylesheet" type="text/css" href="./src/index.css" />
+    <link rel="stylesheet" type="text/css" href="./src/indelible.css" />
   </head>
 
   <body>
